plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.czagrzebski'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.mysql:mysql-connector-j:9.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation("org.springframework.integration:spring-integration-core:6.4.4")
    implementation "org.springframework.integration:spring-integration-mqtt:6.4.4"
    implementation "com.fasterxml.jackson.core:jackson-databind:2.19.2"
    implementation "com.fasterxml.jackson.core:jackson-annotations:2.19.2"
    implementation "com.fasterxml.jackson.core:jackson-core:2.19.2"
    implementation 'org.springframework:spring-websocket'
    implementation 'org.springframework:spring-messaging'
    implementation 'org.springframework.security:spring-security-messaging:'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    //developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    runtimeOnly 'com.mysql:mysql-connector-j'
    //testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'commons-net:commons-net:3.10.0'
    implementation 'org.apache.commons:commons-compress:1.27.1'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // use the contract project as a dependency
    implementation project(':printhelm-web-contract')

    // Spring AI
    implementation 'org.springframework.ai:spring-ai-starter-model-anthropic:1.1.8'

    // PDF generation
    implementation 'com.github.librepdf:openpdf:2.0.3'
}

springBoot {
    mainClass = 'com.czagrzebski.printhelm.web.Application'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootRun') {
    jvmArgs = ['--add-opens', 'java.base/sun.security.ssl=ALL-UNNAMED']
}
